# bitshard-riddle

./: notes.txt  shell.sh
bitshardshell/: Cargo.toml
bitshardshell/src/: main.rs
