[package]
name = "bitshardshell"
version = "0.1.0"
authors = ["Erik Mayrhofer <erik.mayrhofer@liwest.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image= "0.23.12"
ncurses = { version="5.100.0", features=["wide"] }
